# laser_projector_bridge

./: .gitignore  .project  CMakeLists.txt  README.md  laser_projector_bridge.sln  laser_projector_bridge.vcxproj  laser_projector_bridge.vcxproj.filters  package.xml
include/laser_projector_bridge/: JMLaserProjector.h  image_tracer.h  jmlaser_projector.h  vector_image_builder.h  vector_image_publisher.h  vector_image_subscriber.h
laser_projector_bridge/: laser_projector_bridge.vcxproj  laser_projector_bridge.vcxproj.filters
laser_projector_bridge/include/laser_projector_bridge/: jmlaser.h  jmlaser_projector.h  pattern_builder.h  projection_model_properties.h  vector_image_builder.h
laser_projector_bridge/lib/jmlaser/: jmlaser_x64.lib  jmlaser_x86.def  jmlaser_x86.lib
laser_projector_bridge/src/: jmlaser_projector.cpp  pattern_builder.cpp  vector_image_builder.cpp
laser_projector_bridge_tests/: laser_projector_bridge_tests.vcxproj  laser_projector_bridge_tests.vcxproj.filters
laser_projector_bridge_tests/src/: test_jmlaser_projector.cpp
lib/: add_libs_to_visual_studio.txt  create_a_from_dll.txt  create_a_from_header_stubs.txt  create_lib_from_dll.txt  create_lib_from_header_stubs.txt
lib/jmlaser/: jmlaser-all.def  jmlaser.cpp  jmlaser.def  jmlaser.exp  jmlaser.h  jmlaser.lib  jmlaser_x64.def  jmlaser_x64.exp  jmlaser_x86.exp  test_jmlaser_api.cpp  test_jmlaser_projector.cpp
libs/: add_libs_to_visual_studio.txt  create_lib_from_dll.txt
libs/jmlaser/: jmlaser.def  jmlaser.exp  jmlaser.h  jmlaser.lib
msgs/: point.proto  shape.proto  vector_image.fbs  vector_image.proto
src/: JMLaserProjector.cpp  image_tracer.cpp  jmlaser_projector.cpp  main.cpp  test_jmlaser_api.cpp  test_jmlaser_projector.cpp  vector_image_builder.cpp  vector_image_publisher.cpp  vector_image_subscriber.cpp  vector_image_subscriber_node.cpp
